addTodo async/await 비동기 함수로 수정

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .todo-item:has(input:checked) {
+    @apply bg-neutral-100;
+  }
+}
